# fastapi_learning_v2v

./: main.py  pyproject.toml  requirements.txt
routers/: orders_router.py
schemas/: orders_schema.py  product_schema.py  seller_schema.py
