[project]
name = "fastapi-introduction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.138.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "uvicorn>=0.49.0",
]
